--- a/WS_Part1.ipynb
+++ b/WS_Part1.ipynb
@@ -307,7 +307,8 @@
     }
    ],
    "source": [
-    "df['Coverage'].value_counts()"
+    "df['Coverage'].value_counts()\n",
+    "#test"
    ]
   },
   {
