--- a/WS_Part1.ipynb
+++ b/WS_Part1.ipynb
@@ -307,8 +307,7 @@
     }
    ],
    "source": [
-    "df['Coverage'].value_counts()\n",
-    "#test"
+    "df['Coverage'].value_counts()"
    ]
   },
   {
