--- a/WS_Part1.ipynb
+++ b/WS_Part1.ipynb
@@ -1304,6 +1304,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#detect the outliers, check if the box plot really indicate the outlier\n",
+    "'''\n",
+    "As the output indicated, the \"outliers\" are not really outlier since they are occupying a unignorable percentage of all the values, so I would keep\n",
+    "them for a while.\n",
+    "'''\n",
+    "def outlier_detect(df, num_list, threshold = 1.5):\n",
+    "    for ele in num_list:\n",
+    "        lower_quantile = df[ele].quantile(0.25)\n",
+    "        upper_quantile = df[ele].quantile(0.75)\n",
+    "        upper_limit = upper_quantile + threshold*(upper_quantile - lower_quantile)\n",
+    "        print(ele)\n",
+    "        print(\"number of outliers: \", len(df.loc[df[ele] > upper_limit]))\n",
+    "        print(\"percentage of outliers: \",len(df.loc[df[ele] > upper_limit])/len(df))\n",
+    "        print('*********************************************')\n",
+    "\n",
+    "outlier_detect(df_transfered, num_list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
