--- a/WS_Part1.ipynb
+++ b/WS_Part1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "      <td>No</td>\n",
        "      <td>Basic</td>\n",
        "      <td>Bachelor</td>\n",
-       "      <td>2/3/11</td>\n",
+       "      <td>3/2/2011</td>\n",
        "      <td>Employed</td>\n",
        "      <td>M</td>\n",
        "      <td>43836</td>\n",
@@ -248,10 +248,10 @@
        "QZ44356      Arizona              6979.535903       No  Extended  Bachelor           1/31/11       Unemployed      F       0      Suburban         Single                    94                       13                             42                          0                   8   Personal Auto   Personal L3           Offer3         Agent         1131.464935  Four-Door Car      Medsize\n",
        "AI49188       Nevada             12887.431650       No   Premium  Bachelor           2/19/11         Employed      F   48767      Suburban        Married                   108                       18                             38                          0                   2   Personal Auto   Personal L3           Offer1         Agent          566.472247   Two-Door Car      Medsize\n",
        "WW63253   California              7645.861827       No     Basic  Bachelor           1/20/11       Unemployed      M       0      Suburban        Married                   106                       18                             65                          0                   7  Corporate Auto  Corporate L2           Offer1   Call Center          529.881344            SUV      Medsize\n",
-       "HB64268   Washington              2813.692575       No     Basic  Bachelor            2/3/11         Employed      M   43836         Rural         Single                    73                       12                             44                          0                   1   Personal Auto   Personal L1           Offer1         Agent          138.130879  Four-Door Car      Medsize"
+       "HB64268   Washington              2813.692575       No     Basic  Bachelor          3/2/2011         Employed      M   43836         Rural         Single                    73                       12                             44                          0                   1   Personal Auto   Personal L1           Offer1         Agent          138.130879  Four-Door Car      Medsize"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
     "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)\n",
-    "data = pd.read_csv('WA_Fn-UseC_-Marketing-Customer-Value-Analysis.csv')\n",
+    "data = pd.read_csv('AutoInsurance.csv')\n",
     "df = data.copy()\n",
     "df.set_index('Customer', inplace= True) #the customer number is irelative with the classification so set it as index\n",
     "df.head()"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "Name: Coverage, dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
        "[9134 rows x 63 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1305,9 +1305,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer Lifetime Value\n",
+      "number of outliers:  817\n",
+      "percentage of outliers:  0.08944602583753011\n",
+      "*********************************************\n",
+      "Income\n",
+      "number of outliers:  0\n",
+      "percentage of outliers:  0.0\n",
+      "*********************************************\n",
+      "Monthly Premium Auto\n",
+      "number of outliers:  430\n",
+      "percentage of outliers:  0.047076855703963215\n",
+      "*********************************************\n",
+      "Months Since Last Claim\n",
+      "number of outliers:  0\n",
+      "percentage of outliers:  0.0\n",
+      "*********************************************\n",
+      "Months Since Policy Inception\n",
+      "number of outliers:  0\n",
+      "percentage of outliers:  0.0\n",
+      "*********************************************\n",
+      "Number of Open Complaints\n",
+      "number of outliers:  1882\n",
+      "percentage of outliers:  0.20604335449967157\n",
+      "*********************************************\n",
+      "Number of Policies\n",
+      "number of outliers:  416\n",
+      "percentage of outliers:  0.04554412086708999\n",
+      "*********************************************\n",
+      "Total Claim Amount\n",
+      "number of outliers:  453\n",
+      "percentage of outliers:  0.04959492007882636\n",
+      "*********************************************\n"
+     ]
+    }
+   ],
    "source": [
     "#detect the outliers, check if the box plot really indicate the outlier\n",
     "'''\n",
