--- a/WS_Part1.ipynb
+++ b/WS_Part1.ipynb
@@ -1271,7 +1271,7 @@
    ],
    "source": [
     "df_transfered, cat_list, num_list = encode(df)\n",
-    "df_transfered\n"
+    "df_transfered #encoded data\n"
    ]
   },
   {
